--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "cruzid": "sslug",
-    "password": "1234567890",
+    "cruzid": "ialsanto",
+    "password": "z3FDHH2oBf8SeOKd",
     "assignment": "HO2"
 }
